@@ -6,10 +6,11 @@ Revision history for Perl module Net::Curl::Promiser
   distribution knows about are supported. (Patches to support additional
   interfaces will be considered.)
 - BUG FIX: We no longer process pending requests within a callback.
-  This caused libcurl corruption because we were removing handles within
-  those callbacks.
+  That processing caused libcurl corruption because we were removing handles
+  within the callbacks. (cf. curl_multi_remove_handle(3))
 - BUG FIX: Allow reuse of $easy within a promise callback.
 - BUG FIX: Memory leaks are fixed; detection is added to prevent regressions.
+- fail_handle() and cancel_handle() now reset() the Easy object.
 
 0.12 Sun 5 Jul 2020
 - Fix regression in IO::Async test.
